# marginlight

./: .gitignore  DISTRIBUTION.md  LICENSE  MARKETING.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: publish-source-tree.yml
examples/: quotes.md
scripts/: check-macos-release-prereqs.sh  release-macos.sh  setup-notary-profile.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EmptyState.tsx  FloatingIsland.tsx  IslandControls.tsx  Onboarding.tsx  SettingsWindow.tsx  SourceSelector.tsx  ThemeSelector.tsx
src/data/: builtinQuotes.ts
src/lib/: dateUtils.ts  exportImage.ts  quoteParser.ts  quoteSelector.ts  storage.ts  tauri.ts  xPostFormatter.ts
src/test/: quoteParser.test.ts  quoteSelector.test.ts  xPostFormatter.test.ts
src/themes/: themes.ts
src/types/: quote.ts  settings.ts
