[package]
name = "marginlight"
version = "0.1.0"
description = "A floating daily wisdom island for MacBook."
authors = ["Marginlight"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "marginlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
walkdir = "2"
